--- a/trunk/app/go2me/templates/master.html
+++ b/trunk/app/go2me/templates/master.html
@@ -29,20 +29,6 @@ function Loaded() {}
 {% endblock %}
 
 {% block footer %}
-<div class="bottom">
-<a href="http://code.google.com/p/g02me/wiki/AboutUs">About Us</a> |
-<a href="http://blog.go2.me">Blog</a> |
-<a href="http://code.google.com/p/g02me/wiki/API">Developers</a> |
-<a href="http://getsatisfaction.com/g02me/products/g02me_g02me">Feedback</a> |
-<a href="http://code.google.com/p/g02me/wiki/TermsOfService">Terms of Service</a> |
-<a href="http://twitter.com/go2me">Twitter</a>
-</div>
-
-<div style="text-align:center;padding-top:20px;">
-<a href="http://code.google.com/p/g02me/">
-	<img src="http://code.google.com/appengine/images/appengine-silver-120x30.gif" alt="Powered by Google App Engine" />
-</a>
-</div>
 {% endblock %}
 
 {% block analytics %}
@@ -53,17 +39,16 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 <script type="text/javascript">
 var pageTracker = _gat._getTracker("{{analytics_code}}");
 pageTracker._addIgnoredOrganic("{{site_host}}")
-pageTracker._addIgnoredOrganic("go2.me")
 {% ifnotequal user_type 'base' %}pageTracker._setVar({{user_type}}){% endifnotequal %}
 pageTracker._trackPageview();
 {% for event in GA_Events %}
 	pageTracker._trackPageview("/meta/{{event}}");
 {% endfor %}
 </script>
-
 {% endblock %}
 
-{% block page_end %}{% endblock %}
+{% block page_end %}
+{% endblock %}
 
 </body>
 </html>
