--- a/trunk/app/styles/main.css
+++ b/trunk/app/styles/main.css
@@ -1,5 +1,5 @@
 body {
-margin: 2px 8px;
+margin: 0;
 padding: 0;
 font-family: verdana, arial, sans-serif;
 font-size: 14px;
@@ -110,35 +110,43 @@ margin-bottom: 3px;
 }
 
 /* Info-bar styles (for head.html) */
-#frame td {
-vertical-align: top;
-margin: 0;
-padding: 0;
+#info {
+position: absolute;
+top: 0;
+left: 0;
+width: 372px;
+height: 900px;
+border-right: 3px solid #45AFD1;
 }
 
-#info {
-float: left;
-width: 375px;
-border: 1px solid red;
+#content {
+margin: 0 0 0 375px;
+height: 868px;
+}
+
+#address {
+margin: 0 0 0 375px;
+padding: 3px 6px;
+}
+
+#address input {
+width: 98%;
 }
 
 iframe {
-border: 1px solid green;
 width: 100%;
-height: 5000px;
+height: 100%;
 }
 
 #info-status {
-float: right;
-margin-left: 5px;
-padding-left: 5px;
-width: 180px;
-border-left: 1px solid #45AFD1;
+padding-bottom: 5px;
+border-bottom: 3px solid #45AFD1;
 }
 
 #info-status p
 {
 margin: 0;
+padding: 0 4px 1px 4px;
 }
 
 p.stats-header {
@@ -153,12 +161,8 @@ margin-right: 160px;
 }
 
 #info-form {
-clear: left;
 padding: 0;
 margin: 0;
-white-space: nowrap;
-overflow: hidden;
-min-width: 400px;
 }
 
 label {
@@ -172,9 +176,16 @@ padding: 1px 2px;
 margin: 1px;
 }
 
+div.comments {
+border-bottom: 3px solid #45AFD1;
+height: 500px;
+overflow: auto;
+}
+
 div.comments p {
 color: #AAA;
-margin: 0 0;
+margin: 0;
+padding: 0 0 4px 4px;
 }
 
 /* Page-specific styles (based on pages.html master template) */
