--- a/app/go2me/templates/mapped.html
+++ b/app/go2me/templates/mapped.html
@@ -45,21 +45,44 @@ function Click()
 	msLoaded = 0;
 }
 
+function PostComment()
+{
+	Go2.PostComment("{{map.GetId}}", txtUsername ? txtUsername.value : '', txtComment.value);
+}
+
+function KeyDownUsername(evt)
+{
+	if (evt.keyCode == 13)
+		{
+		txtComment.focus();
+		evt.preventDefault();
+		}
+}	
+
+function KeyDownComment(evt)
+{
+	if (evt.keyCode == 13)
+		{
+		PostComment();
+		evt.preventDefault();
+		}
+}
+
 window.onclick = Click;
 {% endblock %}
 
 {% block body %}
-<table id="frame">
-<tr><td style="width:375px;">
+<div id="info">
 	<div id="info-status">
 		<p class="stats-header">
 			<a style="float:right;padding-top:2px;padding-right:2px;" target="_top" href="{{map.Href}}" title="Close Frame"><img class="x" src="/images/x.png"/></a>
-			Stats
+			Go2.me
 		</p>
-		<p>Created: {{map.dateCreated|Age}}</p>
-		{% if map.Creator %}
-		<p>By: <a href="/user/{{map.Creator}}" target="_top">{{map.Creator}}</a></p>
-		{% endif %}
+		<p>Created: {{map.dateCreated|Age}}
+			{% if map.Creator %}
+			by <a href="/user/{{map.Creator}}" target="_top">{{map.Creator}}</a>
+			{% endif %}
+		</p>
 		<p>Shared: {{map.shareCount|intcomma}}</p>
 		<p>Viewed: {{map.viewCount|intcomma}}</p>
 		<p>Comments: {{map.CommentCount|intcomma}}</p>
@@ -73,40 +96,9 @@ window.onclick = Click;
 		</p>{% endif %}
 	</div> <!-- info-status -->
 	
-	<div id="info-body">
-	<a target="_top" href="/" title="{{site_name}} Home | Popular Pages"><img class="logo-small" src="/images/logo-small.png"></a>
-	<h1><a target="_top" href="{{map.Href}}" title="{{map.url|escape}}">{{map.title|ellipsis:100|escape}}</a></h1>
-	<p class="url">{{map.url|escape}}</p>
-	
-	<div id="info-form">
-		{% if username %}
-		<div style="float:left;width:70px;height:22px;margin-top:4px;">
-		{% else %}
-		<div style="float:left;width:220px;">
-		{% endif %}
-			{% if not username %}
-			<label for="username">Nickname: </label>
-			<input maxlength="20" style="width:70px;" type="text" id="username" name="username" tabindex="1"/>
-			{% endif %}
-			<label for="comment">Comment: </label>
-		</div>
-	
-		<input onclick="PostComment();" style="float:right;width:70px;" type="button" value="Post" tabindex="3"/>
-	
-		{% if username %}
-		<div style="margin-left:70px;margin-right:80px;">
-		{% else %}
-		<div style="margin-left:230px;margin-right:80px;">
-		{% endif %}
-			<input style="width:97%;" type="text" id="comment" name="comment" tabindex="2"/>
-		</div>
-	
-		<p style="clear:left;" class="help">Comment format: "nickname: text of your comment [tag1, tag2, ...]"</p>
-	</div>
-	
 	<div class="comments">
 	{% for comment in map.Comments %}
-		{% spaceless %}<p>
+		<p>
 	    {% if comment.username %}<a target="_top" href="/user/{{comment.username}}" title="{{comment.username}}'s activity">{{comment.username}}</a>:{% endif %}
 	    {{comment.comment|escape|urlizetop}}
 	    {% if comment.tags %}
@@ -116,16 +108,48 @@ window.onclick = Click;
 	    {% if comment.AllowDelete %}
 	    <img class="x" onclick="Go2.DeleteComment('{{comment.DelKey}}');" src="/images/x.png"/>
 	    {% endif %}
-	    </p>{% endspaceless %}
+	    </p>
 	{% endfor %}
+	</div>
+
+	<div id="info-form">
+		<p>
+			<label for="username">Nickname:</label>
+			{% if username %}
+				<a href="/user/{{username}}" title="{{username}}'s activity">{{username}}</a>
+				(<a href="/cmd/setusername?username=">Sign out</a>)
+			{% else %}
+			<input maxlength="20" style="width:70px;" type="text" id="username" name="username" tabindex="1"/>
+			{% endif %}
+		</p>
+		
+		<p>
+			<label for="comment">Comment:<br/></label>
+			<input style="float: right;" onclick="PostComment();" type="button" value="Post" tabindex="3"/>
+		
+			<input style="width:300px;height:40px;" type="text" id="comment" name="comment" tabindex="2"/>
+		</p>
+	
+		<p style="clear:left;" class="help">Comment format: "nickname: text of your comment [tag1, tag2, ...]"</p>
+	</div>
+	
+
+	
+	<div class="bottom">
+		<a target="_top" href="/" title="{{site_name}} Home | Popular Pages"><img class="logo-small" src="/images/logo-small.png"></a>
 	</div>
 	
 	</div> <!-- info-body -->
-	</td>
+</div> <!-- sidebar -->
 
-	<td style="width:90%">
+<div id="address">
+	<input id="url" type="text"/ value="{{map.url|escape}}">
+	
+</div>
+
+<div id="content">
 	<iframe src="{{map.Href}}"/>
-	Your browser does not support frames.
-	</iframe></td>
-</tr></table>
+		Your browser does not support frames.
+	</iframe>
+</div>
 {% endblock %}
