--- a/trunk/app/styles/main.css
+++ b/trunk/app/styles/main.css
@@ -127,6 +127,7 @@ height: 868px;
 #address {
 margin: 0 0 0 375px;
 padding: 3px 6px;
+border-bottom: 3px solid #45AFD1;
 }
 
 #address input {
@@ -136,6 +137,7 @@ width: 98%;
 iframe {
 width: 100%;
 height: 100%;
+border: 0;
 }
 
 #info-status {
